-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0 Beta2
-
macOS 13.5.2, Qt Creator 14.0.0-RC1
-
-
93da6f240 (6.8), df4d48a05 (6.8), 04d0b0d27 (6.8), ba1ca79d5 (6.8), aa361ba8e (6.8), 1f728c508 (6.8)
Code
import QtQuick Window { width: 800 height: 600 visible: true title: ` ` }
Steps to reproduce
- At the end of the Window block, type in "Component." and inspect the auto-completion list
- Undo your changes
- Comment out title: ` ` (or replace the backticks ` with double-quotes ")
- Repeat Step #1
Expected Outcomes (Step 4)
Without backticks, we get a sensible list for Component:

Actual Outcomes (Step 1)
With backticks, we get a list that is unrelated to Component:
Notes
The customer reported this on macOS, and I could reproduce it on macOS. However, I can't reproduce it on Windows.
I notice that QMLLS' auto-completion is very fast on macOS, but very slow on Windows. Could it be a race condition of some kind?
- is covered by
-
QTBUG-92876 Dom: model JS expressions/statements in QmlDom and add qmlls (find usages, go to definition, ...) support for them
-
- Closed
-
-
QTBUG-126405 Standalone qmlls binary via github actions
-
- Closed
-