adapt qmllsutils to the newly introduced lambdas

Adapt the various qqmllsutils operations find type definition, find
definition, find usages and resolveExpressionType to support lambdas and
also add some if-guards to not crash on lambdas.

Also add a test to check that completions work correctly inside of
lambdas.

Task-number: QTBUG-127532
Task-number: QTBUG-92876
Change-Id: I7794901db30bf503d32eb950cdddb64f55091da2
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 4e1aad276ddc8e7a76f09981cb8fccfae2add964)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>