src/qmlls/qqmllsutils.cpp
@@ -607,6 +607,15 @@ static DomItem findJSIdentifierDefinition(const DomItem &item, const QString &na
         }
     }
 
+    // lambda function parameters are defined in the FunctionExpression scope
+    if (DomItem res = item.filterUp(
+                [](DomType k, const DomItem &) { return k == DomType::ScriptFunctionExpression; },
+                FilterUpOptions::ReturnOuter)) {
+        if (findDefinitionFromItem(res, name)) {
+            return res;
+        }
+    }
+
     return definitionOfItem;
 }
 
@@ -989,9 +998,15 @@ static void findUsagesHelper(const DomItem &item, const QString &name, Usages &r
                     const QString fileName = item.canonicalFilePath();
                     result.appendUsage({ fileName, location });
                     return true;
-                } else if (QQmlJSScope::ConstPtr scope = item.semanticScope();
-                           scope && scope->ownJSIdentifier(name)) {
-                    // current JS identifier has been redefined, do not visit children
+                }
+                QQmlJSScope::ConstPtr scope = item.semanticScope();
+                // Do not visit children if current JS identifier has been redefined.
+                if (scope && scope != item.directParent().semanticScope()
+                    && scope->ownJSIdentifier(name)) {
+                    // Note that if the current semantic scope == parent's semantic scope, then no
+                    // redefinition actually took place. This happens for example in
+                    // FunctionExpressions, where the body's semantic scope is the
+                    // FunctionExpression's semantic scope.
                     return false;
                 }
                 return true;
@@ -1607,6 +1622,9 @@ std::optional<ExpressionType> resolveExpressionType(const QQmlJS::Dom::DomItem &
         }
         Q_UNREACHABLE_RETURN({});
     }
+    case DomType::ScriptFunctionExpression: {
+        return ExpressionType{ {}, item.semanticScope(), LambdaMethodIdentifier };
+    }
     case DomType::MethodInfo: {
         auto object = item.as<MethodInfo>();
         if (object && object->semanticScope()) {
@@ -1889,6 +1907,7 @@ std::optional<Location> findDefinitionOf(const DomItem &item)
     case EnumeratorIdentifier:
     case EnumeratorValueIdentifier:
     case GroupedPropertyIdentifier:
+    case LambdaMethodIdentifier:
         qCDebug(QQmlLSUtilsLog) << "QQmlLSUtils::findDefinitionOf was not implemented for type"
                                 << resolvedExpression->type;
         return {};
@@ -1965,6 +1984,7 @@ static QQmlJSScope::ConstPtr expressionTypeWithDefinition(const ExpressionType &
     case GroupedPropertyIdentifier:
     case QmlComponentIdentifier:
     case QualifiedModuleIdentifier:
+    case LambdaMethodIdentifier:
         return ownerType.semanticScope;
     }
     return {};
