tests/auto/qmlls/utils/data/file1.qml
@@ -52,4 +52,10 @@ Item {
         let x = c.children;
         return x;
     }
+
+    function helloLambda(c: C) {
+        let myLambda = function (x, y, z) {
+            let xyz = c.children;
+        };
+    }
 }
